[project]
name = "ink-sight"
version = "0.1.0"
description = "Raspberry Pi assistant that syncs Google Calendar events to a Pimoroni Inky pHAT e-ink display"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalevents>=0.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.26",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (incompatible with ruff format)
    "D203",   # 1 blank line required before class docstring (incompatible with D211)
    "D213",   # Multi-line docstring summary should start at the second line (incompatible with D212)
]
